; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/pm8001/extr_pm8001_sas.c_pm8001_clear_aca.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/pm8001/extr_pm8001_sas.c_pm8001_clear_aca.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain_device = type { i32 }
%struct.pm8001_tmf_task = type { i32 }

@TMF_RESP_FUNC_FAILED = common dso_local global i32 0, align 4
@TMF_CLEAR_ACA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pm8001_clear_aca(%struct.domain_device* %0, i32* %1) #0 {
  %3 = alloca %struct.domain_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.pm8001_tmf_task, align 4
  store %struct.domain_device* %0, %struct.domain_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @TMF_RESP_FUNC_FAILED, align 4
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* @TMF_CLEAR_ACA, align 4
  %9 = getelementptr inbounds %struct.pm8001_tmf_task, %struct.pm8001_tmf_task* %6, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @pm8001_issue_ssp_tmf(%struct.domain_device* %10, i32* %11, %struct.pm8001_tmf_task* %6)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @pm8001_issue_ssp_tmf(%struct.domain_device*, i32*, %struct.pm8001_tmf_task*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
